<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable name="userLogin" type="com.schoolfam.parcher.data.user.User"></variable>
        <variable name="handlers" type="com.schoolfam.parcher.databinding.ActivityLoginBinding"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LoginActivity">

        <TextView
                android:id="@+id/login_app_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                app:fontFamily="@font/masque"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                android:transitionName="appNameTransition"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/splashIcon" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
        <ImageView
                android:contentDescription="@string/app_name"
                android:id="@+id/splashIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/schoolbooks"
                android:transitionName="appIconTransition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.485"
                android:layout_marginRight="8dp"
                android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:layout_marginTop="60dp"
                app:layout_constraintTop_toBottomOf="@+id/login_app_name_text_view">

            <TextView
                    android:id="@+id/login_desc_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_desc"
                    android:gravity="center"
                    app:fontFamily="@font/spiderman_homecoming"
            />

            <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@{userLogin.emailAddress}"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"

            />
            <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:text="@{userLogin.password}"
            />
            <Button

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@color/Transparent"
                    android:textColor="@color/colorPrimary"
                    android:text="Forgot Password"/>

            <Button
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="#fff"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    app:fontFamily="@font/spiderman_homecoming"
                    android:background="@drawable/round_button"

            />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


