<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="user" type="com.schoolfam.parcher.data.user.User"/>
        <variable name="student" type="com.schoolfam.parcher.data.student.Student"/>
    </data>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".Fragments.AdminFragments.AddStudentsFragment">


            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="Register Students"
                      android:fontFamily="@font/masque"
                      android:gravity="center"
                      android:textColor="@color/colorPrimary"
                      android:textSize="25sp"
                      app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="50dp"
                      tools:layout_editor_absoluteX="0dp" android:id="@+id/textView2"/>
            <ScrollView android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fillViewport="true"
                        android:scrollbars="vertical"
                        app:layout_constraintTop_toBottomOf="@+id/textView2">
                <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:id="@+id/card_view"
                        android:layout_gravity="center"
                        app:cardCornerRadius="10dp"
                >

                    <LinearLayout android:layout_width="match_parent"
                                  android:orientation="vertical"
                                  android:layout_height="wrap_content"
                                  android:paddingRight="40dp"
                                  android:paddingLeft="40dp"
                                  android:layout_marginTop="8dp">

                        <EditText
                                android:id="@+id/student_first_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="FIRST NAME"
                                android:text="@{user.fname}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/student_last_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{user.lname}"
                                android:hint="LAST NAME"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/student_user_name_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{user.username}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/student_email_edit_text"
                                android:layout_width="match_parent"
                                android:inputType="textEmailAddress"
                                android:layout_height="wrap_content"
                                android:text="@{user.emailAddress}"
                                android:hint="EMAIL"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <EditText
                                android:id="@+id/student_password_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:hint="PASSWORD"
                                android:text="@{user.password}"
                                android:textSize="15dp"
                                android:fontFamily="@font/spiderman_homecoming"
                                android:layout_marginTop="30dp"
                        />
                        <TextView
                                android:layout_marginTop="20dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Select Grade :"
                                android:fontFamily="@font/masque"
                        />

                        <Spinner
                                android:id="@+id/section_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"

                        />
                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Select Parent :"
                                android:fontFamily="@font/masque"
                        />
                        <Spinner
                                android:id="@+id/parent_spinner"
                                android:layout_width="match_parent"
                                android:layout_height="60dp"

                        />
                        <RadioGroup
                                android:id="@+id/gender_radio_group"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">
                            <RadioButton
                                    android:id="@+id/male_radio_button"
                                    android:layout_width="wrap_content"
                                    android:text="Male"
                                    android:checked="true"
                                    android:fontFamily="@font/spiderman_homecoming"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"/>
                            <RadioButton
                                    android:id="@+id/female_radio_button"
                                    android:layout_width="wrap_content"
                                    android:layout_weight="1"
                                    android:text="Female"
                                    android:fontFamily="@font/spiderman_homecoming"
                                    android:layout_height="wrap_content"/>
                        </RadioGroup>

                        <Button
                                android:id="@+id/student_register_button"
                                android:layout_width="wrap_content"
                                android:paddingLeft="20dp"
                                android:paddingRight="20dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="30dp"
                                android:layout_marginBottom="50dp"
                                android:text="Register"
                                android:textColor="#fff"
                                android:background="@drawable/round_button"
                        />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
